<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.team.detail.player.PlayerDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_player_fanart"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:adjustViewBounds="true"
            android:background="@color/colorPrimary"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_landscape" />

        <LinearLayout
            android:id="@+id/player_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_player_fanart"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/player_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/txt_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:text="@string/title_weight"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_player_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/temp_player_weight"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/player_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/txt_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:text="@string/title_height"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_palyer_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/temp_player_height"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/txt_player_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/player_body"
            android:layout_centerHorizontal="true"
            android:text="@string/temp_player_position"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/border"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/txt_player_position"
            android:background="@color/colorPrimary"
            android:layout_margin="16dp"/>

        <TextView
            android:id="@+id/txt_player_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/border"
            android:layout_centerHorizontal="true"
            android:padding="16dp"
            android:textSize="16sp" />

    </RelativeLayout>

</ScrollView>