<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.event.detail.EventDetailActivity">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/txt_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/temp_date"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txt_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_date"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="8dp"
                    android:text="@string/temp_time"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

                <RelativeLayout
                    android:id="@+id/detail_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_time"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:id="@+id/txt_vs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/title_vs"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/home_team"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@+id/txt_home_score"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/img_home"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="2dp"
                            android:src="@drawable/ic_security" />

                        <TextView
                            android:id="@+id/txt_home_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/temp_home_team"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimary"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/txt_home_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginHorizontal="22dp"
                        android:layout_toStartOf="@+id/txt_vs"
                        android:text="@string/temp_score"
                        android:textSize="46sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/away_team"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/txt_away_score"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/img_away"
                            android:layout_width="75dp"
                            android:layout_height="75dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_margin="2dp"
                            android:src="@drawable/ic_security" />

                        <TextView
                            android:id="@+id/txt_away_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/temp_away_team"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimary"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/txt_away_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginHorizontal="22dp"
                        android:layout_toEndOf="@+id/txt_vs"
                        android:text="@string/temp_score"
                        android:textSize="46sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <View
                    android:id="@+id/border_1"
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:layout_below="@+id/detail_1"
                    android:background="@color/colorPrimary" />

                <RelativeLayout
                    android:id="@+id/detail_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/border_1"
                    android:layout_marginVertical="12dp">

                    <TextView
                        android:id="@+id/txt_goals"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/title_goals"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txt_home_goals"
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true" />

                    <TextView
                        android:id="@+id/txt_away_goals"
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:textAlignment="viewEnd" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/detail_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/detail_2"
                    android:layout_marginVertical="12dp">

                    <TextView
                        android:id="@+id/txt_shots"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/title_shots"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txt_home_shots"
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true" />

                    <TextView
                        android:id="@+id/txt_away_shots"
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:textAlignment="viewEnd"/>
                </RelativeLayout>

                <View
                    android:id="@+id/border_2"
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:layout_below="@+id/detail_3"
                    android:background="@color/colorPrimary" />

                <TextView
                    android:id="@+id/txt_lineups"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/border_2"
                    android:layout_centerHorizontal="true"
                    android:layout_marginVertical="7dp"
                    android:text="@string/title_lineups"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:id="@+id/detail_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_lineups"
                    android:layout_marginVertical="12dp">

                    <TextView
                        android:id="@+id/txt_goalkeeper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/title_goal_keeper"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txt_home_goalkeeper"
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true" />

                    <TextView
                        android:id="@+id/txt_away_goalkeeper"
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:textAlignment="viewEnd"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/detail_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/detail_4"
                    android:layout_marginVertical="12dp">

                    <TextView
                        android:id="@+id/txt_defense"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/title_defense"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txt_home_defense"
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true" />

                    <TextView
                        android:id="@+id/txt_away_defense"
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:textAlignment="viewEnd"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/detail_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/detail_5"
                    android:layout_marginVertical="12dp">

                    <TextView
                        android:id="@+id/txt_midfield"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/title_midfield"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txt_home_midfield"
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true" />

                    <TextView
                        android:id="@+id/txt_away_midfield"
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:textAlignment="viewEnd"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/detail_7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/detail_6"
                    android:layout_marginVertical="12dp">

                    <TextView
                        android:id="@+id/txt_forward"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/title_forward"
                        android:textColor="@color/colorPrimary"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txt_home_forward"
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true" />

                    <TextView
                        android:id="@+id/txt_away_forward"
                        android:layout_width="125dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:textAlignment="viewEnd"/>
                </RelativeLayout>

            </RelativeLayout>

        </ScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>